# uofu-cs-discord-bot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  code  config.toml  rust-toolchain.toml  rustc-ice-2025-11-27T19_34_46-50762.txt  schema.surrealql  secrets.properties
.cargo/: config.toml
.claude/rules/: serenity
.github/workflows/: deploy-docs.yml  docs.yml  rust.yml
assets/: responses.toml
bot/: Cargo.toml
bot-db/: Cargo.toml
bot-db/src/: bank.rs  lib.rs  main.rs  russian_roulette.rs  yeet.rs
bot-lib/: Cargo.toml
bot-lib/src/: config.rs  courses.rs  data.rs  db.rs  event_handler.rs  handle_starboards.rs  lang.rs  lib.rs  llm.rs  starboard.rs  text_detection.rs  utils.rs
bot-lib/src/commands/: add_bot_role.rs  admin.rs  anon_notify.rs  aur_search.rs  bank.rs  cice.rs  class_commands.rs  class_roles.rs  clip_that.rs  course_catalog.rs  create_class_category.rs  db.rs  db_admin.rs  delete_class_category.rs  extract.rs  feedback.rs  flight_tracker.rs  help.rs  llm_prompt.rs  lynch.rs  message_limit.rs  mod.rs  mod_abuse.rs  register.rs  reroll_reply.rs  reset_class_categories.rs  russian_roulette.rs  sathya.rs  set_bot_role.rs  set_dog_role.rs  timeout.rs  track_flight.rs  yeet.rs
bot-lib/src/commands/bank/: bank_admin.rs  bank_user.rs  mod.rs
bot-lib/src/lang/: case.rs  rule.rs  ruleset.rs  ruleset_combinator.rs
bot-llm/: Cargo.toml
bot-llm/src/: lib.rs  main.rs
bot-traits/: Cargo.toml
bot-traits/src/: lib.rs
bot/src/: main.rs
src/: args.rs  commands.rs  config.rs  data.rs  event_handler.rs  handle_starboards.rs  lang.rs  lib.rs  main.rs  memory_regex.rs  reaction_management.rs  starboard.rs  text_detection.rs  types.rs  utils.rs
src/commands/: add_bot_role.rs  course_catalog.rs  create_class_category.rs  lynch.rs  mod.rs  register.rs  remove_bot_role.rs  timeout.rs
src/lang/: case.rs  rule.rs  serialization.rs
