[workspace]
resolver = "2"
members = ["bot", "bot-db", "bot-lib", "bot-traits"]

[profile.release]
debug = 0
incremental = true

[workspace.dependencies]
tokio = { version = "1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "parking_lot",
] }
color-eyre = "0.6"
poise = {git = "https://github.com/serenity-rs/poise/", rev = "db10b12"}
tracing = "0.1"
bot-lib = { path = 'bot-lib' }
bot-traits = { path = 'bot-traits' }
bot-db = { path = 'bot-db' }
rand = "0.9"
serde = { version = "1", features = ["derive", "rc"] }
itertools = "0.14"
notify = { version = "8", default-features = false, features = [
    "macos_kqueue",
] }
ahash = "0.8"

[workspace.lints.rust]
async_fn_in_trait = "allow"
unsafe_code = "forbid"

# override the serenity package
# [patch.crates-io]
# serenity = { path = "/_/contrib/serenity" }
# I have a patch to make the extract work with forwarding, but, I am too lazy to make it good or correct for actual contribution
