[workspace]
resolver = "2"
members = ["bot", "bot-db", "bot-lib", "bot-traits"]

[profile.release]
debug = 0
incremental = true

[workspace.dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt",
    "macros",
    "rt-multi-thread",
] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
] }
color-eyre = "0.6"
poise = { git = "https://github.com/serenity-rs/poise/", rev = "db10b12" }
tracing = "0.1"
bot-lib = { path = 'bot-lib' }
bot-traits = { path = 'bot-traits' }
bot-db = { path = 'bot-db' }
rand = "0.9"
serde = { version = "1", default-features = false, features = ["derive", "rc"] }
itertools = "0.14"
notify = { version = "8", default-features = false, features = [
    "macos_kqueue",
] }
rustc-hash = "2"

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity.git" }

[workspace.lints.rust]
async_fn_in_trait = "allow"
unsafe_code = "forbid"

[profile.dev.package.poise]
hint-mostly-unused = true

[profile.release.package.poise]
hint-mostly-unused = true

[profile.dev.package.serenity]
hint-mostly-unused = true

[profile.release.package.serenity]
hint-mostly-unused = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 1

[profile.test.package."*"]
opt-level = 3
