[package]
name = "bot-db"
version = "0.1.0"
edition = "2024"

[dependencies]
sled = "0.34"
bincode = "1.3"
color-eyre = { workspace = true }
serde = { workspace = true }
bot-traits = { workspace = true }
poise = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }

[lints]
workspace = true
