[package]
name = "bot-lib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true }
color-eyre = { workspace = true }
poise = { workspace = true }
tracing = { workspace = true }
bot-llm = { workspace = true }
bot-traits = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
bot-db = { workspace = true }
itertools = { workspace = true }
notify = { workspace = true }
chrono = "0.4"
toml = "0.8"
regex = "1"
nom = "7"
emojis = "0.6"
serde_with = { version = "3.7.0", features = ["chrono"] }
futures = "0.3"
tap = "1"
parking_lot = "0.12"
serde_json = "1"
tokio-stream = "0.1"
crossbeam-channel = "0.5"
raur = "7"
humantime = "2"

[lints]
workspace = true
