[package]
name = "bot-lib"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = { workspace = true }
color-eyre = { workspace = true }
poise = { workspace = true }
tracing = { workspace = true }
bot-traits = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
bot-db = { workspace = true }
itertools = { workspace = true }
notify = { workspace = true }
rustc-hash = { workspace = true }
chrono = "0.4"
toml = { default-features = false, version = "0.9", features = ["parse", "serde", "std"] }
regex = "1"
nom = "7"
serde_with = { version = "3.7", features = ["chrono"] }
futures = "0.3"
parking_lot = "0.12"
serde_json = "1"
tokio-stream = "0.1"
raur = "7"
humantime = "2"
human-repr = "1.1"
reqwest = { version = "0.12.12", features = ["json"] }

[lints]
workspace = true
