[package]
name = "bot-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { workspace = true }
tracing-subscriber = { workspace = true }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6", features = [
    "cuda",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6", features = [
    "cuda",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6", features = [
    "cuda",
] }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.6", features = [
    "cuda",
] }
tokenizers = "0.19.1"
rand.workspace = true

[lints]
workspace = true
