[package]
name = "bot-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { workspace = true }
tracing-subscriber = { workspace = true }
tokenizers = "0.19.1"
rand.workspace = true


[dependencies.candle-core]
git = "https://github.com/huggingface/candle.git"
rev="f856b5c3a75028d384c26e36501d429091662cd3"
version = "0.7"
features = [
    "cuda",
]
[dependencies.candle-nn]
git = "https://github.com/huggingface/candle.git"
rev="f856b5c3a75028d384c26e36501d429091662cd3"
version = "0.7"
features = [
    "cuda",
]
[dependencies.candle-transformers]
git = "https://github.com/huggingface/candle.git"
rev="f856b5c3a75028d384c26e36501d429091662cd3"
version = "0.7"
features = [
    "cuda",
]
[dependencies.candle-examples]
git = "https://github.com/huggingface/candle.git"
rev="f856b5c3a75028d384c26e36501d429091662cd3"
version = "0.7"
features = [
    "cuda",
]

[lints]
workspace = true
