[package]
name = "bot-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { workspace = true }
tracing-subscriber = { workspace = true }
tokenizers = "0.19.1"
rand.workspace = true


[dependencies.candle-core]
git = "https://github.com/huggingface/candle.git"
rev="23ed8a9ded155df7b5961d6a5ae12b4e8096a9c2"
features = [
    "cuda",
]
[dependencies.candle-nn]
git = "https://github.com/huggingface/candle.git"
rev="23ed8a9ded155df7b5961d6a5ae12b4e8096a9c2"
features = [
    "cuda",
]
[dependencies.candle-transformers]
git = "https://github.com/huggingface/candle.git"
rev="23ed8a9ded155df7b5961d6a5ae12b4e8096a9c2"
features = [
    "cuda",
]
[dependencies.candle-examples]
git = "https://github.com/huggingface/candle.git"
rev="23ed8a9ded155df7b5961d6a5ae12b4e8096a9c2"
features = [
    "cuda",
]

[lints]
workspace = true
