[package]
name = "bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6"
dotenvy = "0.15.7"
poise = "0.6.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing = "0.1.40"
bot-lib = { path = "../bot-lib" }

