[package]
name = "bot"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = { workspace = true }
color-eyre = { workspace = true }
poise = { workspace = true }
tracing = { workspace = true }
bot-lib = { workspace = true }
bot-traits = { workspace = true }
notify = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
console-subscriber = { version = "0.4", features = ["parking_lot"] }

[lints]
workspace = true
